--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,15 +1,15 @@
-fastapi==0.110.0
-uvicorn==0.29.0
+fastapi
+uvicorn
 
-requests==2.31.0
-beautifulsoup4==4.12.3
+requests
+beautifulsoup4
 
-python-dotenv==1.0.1
+python-dotenv
 
-langchain==0.2.1
-langchain-core==0.2.3
-langchain-google-genai==1.0.3
+langchain
+langchain-core
+langchain-google-genai
 
-tenacity==8.2.3
+tenacity
 
-pydantic==2.6.4
+pydantic
